added some more to the parralax etc

--- a/index.html
+++ b/index.html
@@ -88,11 +88,10 @@
         </div>
     </div>
 
-
-    <hr>
     <div class="container wow fadeIn" data-wow-delay="0.5s">
         <div class="row">
             <div class="col-md-12">
+                <hr>
                 <h2 class="font-cursive text-center"> What I <strong class="text-accent">do</strong> </h2>
             </div>
         </div>
@@ -113,10 +112,11 @@
         </div>
     </div>
 
+    <br>
 
-    <hr>
+    <div class="img-holder regular" data-image="img/nationalaward.jpg"></div>
 
-    <div class="section half-height wow slideInLeft" data-wow-delay="0.5s">
+    <div class="section half-height wow slideInLeft" data-wow-delay="0.1s">
 
 
         <div class="row vertical-align">
@@ -125,7 +125,7 @@
                 <div class="col-md-6">
                 </div>
                 <div class="col-md-6">
-                    <h2 class="font-plain"> Consultant SIO </h2>
+                    <h1 class="font-plain"> Consultant SIO </h1>
                     <h3 class="text-secondary">Accountability. Responsibility. Liability. Pressure.</h3>
 
                     <p> Are the challenges ahead of you too daunting to complate? </p>
@@ -155,58 +155,153 @@
         </div>
     </div>
 
-    <hr>
+    <div class="img-holder regular" data-image="img/mentor.jpg"></div>
 
-    <div class="section half-height wow slideInRight" data-wow-delay="0.5s">
 
+    <div class="section wow slideInRight" data-wow-delay="0.1s">
         <div class="row vertical-align">
+            <br>
             <div class="container">
-                <div class="col-md-5">
-                    <h2 class="font-cursive"> Life coach </h2>
+                <div class="col-md-8">
+                    <h2 class="font-cursive text-accent"> Life coach </h2>
                     <br>
                     <h4>Change your thinking. </h4>
                     <h4> Find what's holding you back. </h4>
                     <h4>Be the best version of yourself.</h4>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="row ">
+                                <div class="col-md-12">
+                                    <p><i class="fa fa-quote-left "></i> &nbsp; Lisa's enthusiastic, engaging manner and professionalism make her a fantastic mentor - whom I would recommend to anyone. Her knowledge and expertise guided me through some Important interviews with successful outcomes, gently coaching me to present myself in a clear, confident and intelligent way. I have learned a great deal from Lisa and believe my time with her gave me skills I will use for life. &nbsp; <i class="fa fa-quote-right "></i>
+                                    </p>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <img class="img-responsive img-circle " src="./img/alice.jpg"></img>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <p> - Alice Fearnley <strong> Student? </strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row ">
+                                <div class="col-md-12">
+                                    <p><i class="fa fa-quote-left "></i> &nbsp; During 2012, I went through the promotion process in West Yorkshire Police to the rank of Sergeant. Due to the demand across the Force, this was an extremely challenging process. I was lucky enough to be coached by Lisa Griffin and can state I would not have been promoted without the guidance, assistance and experience Lisa offered. Even though being in one of the most demanding roles in West Yorkshire Police, as a Senior Investigating Officer Lisa made time for me to have 'one to one' mentoring. She provided me with the techniques, studying content, structure and most importantly the confidence required to successfully pass the promotion selection process &nbsp; <i class="fa fa-quote-right "></i>
+                                    </p>
+                                    <div class="row">
+                                        <!--                                         <div class="col-md-6">
+                                            <img class="img-responsive img-circle " src="./img/alice.jpg"></img>
+                                        </div> -->
+                                        <div class="col-md-12">
+                                            <p> - Detective Sergeant Kravtschuk <strong> Leeds Crime team </strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <img class="img-responsive img-circle " src="./img/vijay.jpg"></img>
+                                </div>
+                                <div class="col-md-8">
+                                    <p> - Vijay Singh <strong> Associate Inspector, Her Majesty’s Inspectorate of Constabulary. </strong>
+                                    </p>
+                                    <div class="panel-group" id="accordion" role="tablist">
+                                        <div class="panel panel-default">
+                                            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                                                <div class="panel-body">
+                                                    <p><i class="fa fa-quote-left "></i> &nbsp; Having had previous coaches and mentors, throughout my career, often the primary focus was for the mentor/coach(s) objective to put on their CV’s, rather than developing the mentee. Lisa was different her only objective was to get me through the promotion process. Lisa has great communication skills and this helped build our rapport. In many mentor/mentee relationships is the problematic issue of been accessible which I had often experienced, In Lisa’s case access was easily available which made the whole rapport building so much easier. Lisa gave me advice and guidance in a encouraging manner way in that she had belief in my abilities to succeed, this boosted my self confidence. More importantly and as I look back now she gave me the opportunities and opened a number of doors which previous mentors had only suggested. The examples were regular meetings and discussions with the ACPO team and Her Majesty’s Inspectorate of Constabulary (HMIC) which increased my level of awareness of strategic issues, also giving me feedback from their perspective. Lisa not only provided advice but set goals and gave me the opportunity to develop from experiential learning to chair meetings that addressed strategic issues and were constantly challenging my abilities. This again not only boosted my confidence but she also ensured that my skills were “showcased”. This became my stepping stone for further promotion within a very short period of time, working at HMIC performing the role of lead staff officer, raising my profile regionally and nationally. Lisa is without any doubt the best mentor I had in 30 years of my policing career, her personality, character, commitment but above she delivered what she said. Once again thanks Lisa, wishing you all the best in new career. Vijay Singh Associate Inspector Her Majesty’s Inspectorate of Constabulary. &nbsp; <i class="fa fa-quote-right "></i>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Read his story</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    I would like to thank you for the coaching and mentoring you have given me. Your open, honest and neutral advice really helped me to get focussed on what I wanted to achieve and to take positive steps to get me on the right track. Your kind and enthusiastic words kept me motivated and built my confidence.
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <p> - Suzanne <strong> Anonymous? </strong>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-7">
+            </div>
+            <div class="col-md-4">
 
 
-                </div>
             </div>
         </div>
     </div>
+    </div>
+    <br>
 
-    <hr>
+    <div class="img-holder speaker" data-image="img/speaker.jpg"></div>
 
-    <div class="section half-height wow slideInLeft" data-wow-delay="0.5s">
-
+    <div class="section wow slideInLeft" data-wow-delay="0.1s">
         <div class="row vertical-align ">
-            <div class="col-md-7 ">
+            <div class="container">
+                <div class="col-md-7 ">
 
+                </div>
+                <div class="col-md-5 ">
+                    <br>
+                    <h1> Public speaking </h1>
+
+                    <h3 class="text-secondary "> The role of the Senior Investigating Officer</h3>
+                    <p> Test </p>
+
+                    <h3 class="text-secondary "> Homicide investigations</h3>
+                    <p> Test </p>
+
+                    <h4 class="text-accent font-cursive "> Inspirational</h4>
+                    <p> Test </p>
+
+                    <p><i class="fa fa-quote-left "></i> &nbsp; I have known Lisa Griffin for 5 years. During that period I have conducted a number of prosecutions arising out of investigations carried out under Lisa’s direction as Senior Investigating Officer. Those have included the prosecution of a number of men for murder and conspiracy to pervert the course of justice arising out of a fatal shooting in public in Leeds (R. v Afzal Arif and others) and the prosecution on charges of manslaughter and other offences of a woman who starved her child to death and then stored his mummified body in her bedroom for a number of years (R. v Amanda Hutton). The cases have all been highly complex both in factual and scientific terms. Lisa’s quality of investigation has always been of a very high quality, involving resourceful and intelligent lines of investigation and the effective deployment of resources. I know that she has the confidence of all of the senior lawyers with whom she has worked. Lisa is an exeptional S.I.O with great experience and is ideally placed to train future officers for that role. &nbsp; <i class="fa fa-quote-right "></i>
+                    </p>
+                    <div class="row">
+                        <!--                                         <div class="col-md-6">
+                                            <img class="img-responsive img-circle " src="./img/alice.jpg"></img>
+                                        </div> -->
+                        <div class="col-md-12">
+                            <p> - Paul Greaney <strong> Q. C. </strong>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-5 ">
-                <h2> Public speaking </h2>
+        </div>
+    </div>
+    <br>
 
-                <h3 class="text-secondary "> The role of the Senior Investigating Officer</h3>
-                <p> Test </p>
-
-                <h3 class="text-secondary "> Homicide investigations</h3>
-                <p> Test </p>
-
-                <h4 class="text-accent font-cursive "> Inspirational</h4>
-                <p> Test </p>
-            </div>
-
+    <!--     <div class="row ">
+        <div class="col-md-12 ">
+            <h2 class="font-cursive text-center "> What people are <strong class="text-accent ">saying</strong> </h2>
         </div>
     </div>
 
-    <!-- 
-
-    <div class="col-md-12 ">
-        <h2 class="font-cursive text-center "> What people are <strong class="text-accent ">saying</strong> </h2>
-    </div>
-
-       <div class="row ">
+    <div class="row ">
         <div class="col-md-8 col-md-offset-2 ">
             <div class="row ">
                 <div class="col-md-3 ">
@@ -258,10 +353,11 @@
 
     <hr>
 
-    <div class="container wow fadeIn " data-wow-delay="0.5s">
+    <div class="container wow fadeIn " data-wow-delay="0.1s">
         <div class="row text-center ">
             <div class="col-md-12 ">
-                <h2 class="font-cursive "> How to <span class="text-accent "> find me </span> </h2>
+                <h2 class="font-cursive "> I'd love for you to <span class="text-accent "> get in touch </span>  </h2>
+                <p> Call me on XYZ at these times and we can ABC, I look forward to hearing from you soon. </p>
                 <p>
                     <strong>Phone:</strong> 07762&nbsp;723&nbsp;260
                 </p>
@@ -274,7 +370,7 @@
 
     <hr>
 
-    <div class="row ">
+    <div class="row">
         <div class="col-md-12 text-center ">
             <p class="text-secondary "> Louis John Bichard </p>
         </div>
@@ -285,8 +381,25 @@
     <script src="bower_components/jquery/dist/jquery.min.js "></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8 "></script>
     <script src="bower_components/wow/dist/wow.min.js "></script>
+    <script src="bower_components/Parallax-ImageScroll/jquery.imageScroll.min.js"></script>
     <script>
     new WOW().init();
+    $('.img-holder.regular').imageScroll({
+        mediaHeight: 600,
+        mediaWidth: 680,
+        holderMaxHeight: 800,
+        parralax: true,
+        speed: 0.85
+    });
+
+    $('.img-holder.speaker').imageScroll({
+        mediaHeight: 1700,
+        mediaWidth: 1200,
+        holderMaxHeight: 700,
+        parralax: true,
+        coverRatio: 0.5,
+        speed: 0.85
+    });
     </script>
 </body>
 
