--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
 
     <link rel="icon" type="image/png" href="img/ico.png">
+    <style>
+    .background-purple {
+        background-color: #26C6DA;
+        color: white;
+    }
+    </style>
 
 
 </head>
@@ -88,31 +94,38 @@
         </div>
     </div>
 
-    <div class="container wow fadeIn" data-wow-delay="0.5s">
-        <div class="row">
-            <div class="col-md-12">
-                <hr>
-                <h2 class="font-cursive text-center"> What I <strong class="text-accent">do</strong> </h2>
+    <div class="background-purple wow fadeIn" data-wow-delay="0.5s">
+        <div class="container">
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="font-cursive text-center"> What I do</h2>
+                </div>
             </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-4 col-xs-4 text-center">
-                <h3 class="font-plain"> Consultant </h3>
-                <i class="fa fa-4x fa-search"></i>
+            <div class="row">
+                <div class="col-md-4 col-xs-4 text-center">
+                    <h3 class="font-plain"> Consultant </h3>
+                    <i class="fa fa-4x fa-search"></i>
+                </div>
+                <div class="col-md-4 col-xs-4 text-center">
+                    <h3 class="font-cursive"> Life coach</h3>
+                    <i class="fa fa-4x fa-graduation-cap"></i>
+                </div>
+                <div class="col-md-4 col-xs-4 text-center">
+                    <h3> Public speaker </h3>
+                    <i class="fa fa-4x fa-microphone"></i>
+                </div>
             </div>
-            <div class="col-md-4 col-xs-4 text-center">
-                <h3 class="font-cursive"> Life coach</h3>
-                <i class="fa fa-4x fa-graduation-cap"></i>
-            </div>
-            <div class="col-md-4 col-xs-4 text-center">
-                <h3> Public speaker </h3>
-                <i class="fa fa-4x fa-microphone"></i>
-            </div>
+            <br>
+            <br>
+            <br>
+            <br>
         </div>
     </div>
-
-    <br>
 
     <div class="img-holder regular" data-image="img/nationalaward.jpg"></div>
 
@@ -351,12 +364,10 @@
         </div>
     </div> -->
 
-    <hr>
-
-    <div class="container wow fadeIn " data-wow-delay="0.1s">
+    <div class="background-purple wow fadeIn " data-wow-delay="0.1s">
         <div class="row text-center ">
             <div class="col-md-12 ">
-                <h2 class="font-cursive "> I'd love for you to <span class="text-accent "> get in touch </span>  </h2>
+                <h2 class="font-cursive"> I'd love for you to <span style="text-decoration: underline;"> get in touch  </h2>
                 <p> Call me on XYZ at these times and we can ABC, I look forward to hearing from you soon. </p>
                 <p>
                     <strong>Phone:</strong> 07762&nbsp;723&nbsp;260
@@ -367,15 +378,6 @@
             </div>
         </div>
     </div>
-
-    <hr>
-
-    <div class="row">
-        <div class="col-md-12 text-center ">
-            <p class="text-secondary "> Louis John Bichard </p>
-        </div>
-    </div>
-
 
     <!-- ##BOWER PACKAGES -->
     <script src="bower_components/jquery/dist/jquery.min.js "></script>
