added more images

--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@
 <head>
     <!-- #SITE SETUP -->
     <title>Lisa Jane Griffin</title>
-
     <!-- #LIBRARY STYLES -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css?v=8">
     <!-- <link rel="stylesheet" type="text/css" href="styles/animate.css?v=8"> -->
     <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css?v=8">
-
     <!-- #FONTS -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css?v=8'>
     <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-
     <!-- #CUSTOM STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="styles/core.css">
-
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
-
     <link rel="icon" type="image/png" href="img/ico.png">
     <style>
     .background-purple {
@@ -26,14 +21,9 @@
         color: white;
     }
     </style>
-
-
 </head>
 
-
 <body ng-controller="mainController">
-
-
     <nav class="animated slideInDown  navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -64,7 +54,6 @@
     </nav>
     <br>
     <br>
-
     <br>
     <br>
     <div class="section full-height">
@@ -79,13 +68,10 @@
                     <span class="animated-delay-4 fadeIn"> Humour
                     </span> 
                 </h3> -->
-
                 <h3 class="animated-delay-2 fadeIn font-weight-light text-center"> 
                     Inspiration with tenacity.
                 </h3>
-
             </div>
-
             <div class="col-md-5 col-xs-5">
                 <div class="col-md-6 col-md-offset-3">
                     <img class="animated fadeIn shadow-low img-circle img-responsive" src="./img/lisa.jpg"></img>
@@ -93,7 +79,6 @@
             </div>
         </div>
     </div>
-
     <div class="background-purple wow fadeIn" data-wow-delay="0.5s">
         <div class="container">
             <br>
@@ -105,7 +90,6 @@
                     <h2 class="font-cursive text-center"> What I do</h2>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md-4 col-xs-4 text-center">
                     <h3 class="font-plain"> Consultant </h3>
@@ -126,30 +110,20 @@
             <br>
         </div>
     </div>
-
     <div class="img-holder regular" data-image="img/nationalaward.jpg"></div>
-
     <div class="section half-height wow slideInLeft" data-wow-delay="0.1s">
-
-
         <div class="row vertical-align">
             <div class="container">
-
                 <div class="col-md-6">
                 </div>
                 <div class="col-md-6">
                     <h1 class="font-plain"> Consultant SIO </h1>
                     <h3 class="text-secondary">Accountability. Responsibility. Liability. Pressure.</h3>
-
                     <p> Are the challenges ahead of you too daunting to complate? </p>
                     <p> Being a Senior Investigating Officer can be a lonely place. I will introduce you to three loyal companions, they will guide you to achieve success. </p>
-
                     <p class="text-accent">Honest, humility & humour</p>
-
                     <p> I have faced daunting challenges and achieved successful outcomes. Read on to see my:</p>
-
                     <ul>
-
                         <li>
                             <a>86 day kidap in sudan</a>
                         </li>
@@ -167,10 +141,7 @@
             </div>
         </div>
     </div>
-
     <div class="img-holder regular" data-image="img/mentor.jpg"></div>
-
-
     <div class="section wow slideInRight" data-wow-delay="0.1s">
         <div class="row vertical-align">
             <br>
@@ -262,52 +233,48 @@
                 </div>
             </div>
             <div class="col-md-4">
-
-
             </div>
         </div>
     </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <img class="img-responsive" src="img/lecture.JPG">
+        </div>
+    </div>
     <br>
-
-    <div class="img-holder speaker" data-image="img/speaker.jpg"></div>
-
-    <div class="section wow slideInLeft" data-wow-delay="0.1s">
+    <div class="section" data-wow-delay="0.1s">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1> Public speaking </h1>
+            </div>
+        </div>
         <div class="row vertical-align ">
-            <div class="container">
-                <div class="col-md-7 ">
-
-                </div>
-                <div class="col-md-5 ">
-                    <br>
-                    <h1> Public speaking </h1>
-
-                    <h3 class="text-secondary "> The role of the Senior Investigating Officer</h3>
-                    <p> Test </p>
-
-                    <h3 class="text-secondary "> Homicide investigations</h3>
-                    <p> Test </p>
-
-                    <h4 class="text-accent font-cursive "> Inspirational</h4>
-                    <p> Test </p>
-
-                    <p><i class="fa fa-quote-left "></i> &nbsp; I have known Lisa Griffin for 5 years. During that period I have conducted a number of prosecutions arising out of investigations carried out under Lisa’s direction as Senior Investigating Officer. Those have included the prosecution of a number of men for murder and conspiracy to pervert the course of justice arising out of a fatal shooting in public in Leeds (R. v Afzal Arif and others) and the prosecution on charges of manslaughter and other offences of a woman who starved her child to death and then stored his mummified body in her bedroom for a number of years (R. v Amanda Hutton). The cases have all been highly complex both in factual and scientific terms. Lisa’s quality of investigation has always been of a very high quality, involving resourceful and intelligent lines of investigation and the effective deployment of resources. I know that she has the confidence of all of the senior lawyers with whom she has worked. Lisa is an exeptional S.I.O with great experience and is ideally placed to train future officers for that role. &nbsp; <i class="fa fa-quote-right "></i>
-                    </p>
-                    <div class="row">
-                        <!--                                         <div class="col-md-6">
+            <div class="col-md-7 ">
+                <img class="img-responsive" src="img/lisaleft.jpg" height="1191" width="1436"></img>
+            </div>
+            <div class="col-md-5 wow slideInRight">
+                <br>                
+                <h3 class="text-secondary "> The role of the Senior Investigating Officer</h3>
+                <p> Test </p>
+                <h3 class="text-secondary "> Homicide investigations</h3>
+                <p> Test </p>
+                <h4 class="text-accent font-cursive "> Inspirational</h4>
+                <p> Test </p>
+                <p><i class="fa fa-quote-left "></i> &nbsp; I have known Lisa Griffin for 5 years. During that period I have conducted a number of prosecutions arising out of investigations carried out under Lisa’s direction as Senior Investigating Officer. Those have included the prosecution of a number of men for murder and conspiracy to pervert the course of justice arising out of a fatal shooting in public in Leeds (R. v Afzal Arif and others) and the prosecution on charges of manslaughter and other offences of a woman who starved her child to death and then stored his mummified body in her bedroom for a number of years (R. v Amanda Hutton). The cases have all been highly complex both in factual and scientific terms. Lisa’s quality of investigation has always been of a very high quality, involving resourceful and intelligent lines of investigation and the effective deployment of resources. I know that she has the confidence of all of the senior lawyers with whom she has worked. Lisa is an exeptional S.I.O with great experience and is ideally placed to train future officers for that role. &nbsp; <i class="fa fa-quote-right "></i>
+                </p>
+                <div class="row">
+                    <!--                                         <div class="col-md-6">
                                             <img class="img-responsive img-circle " src="./img/alice.jpg"></img>
                                         </div> -->
-                        <div class="col-md-12">
-                            <p> - Paul Greaney <strong> Q. C. </strong>
-                            </p>
-                        </div>
+                    <div class="col-md-12">
+                        <p> - Paul Greaney <strong> Q. C. </strong>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <br>
-
     <!--     <div class="row ">
         <div class="col-md-12 ">
             <h2 class="font-cursive text-center "> What people are <strong class="text-accent ">saying</strong> </h2>
@@ -363,7 +330,6 @@
             </div>
         </div>
     </div> -->
-
     <div class="background-purple wow fadeIn " data-wow-delay="0.1s">
         <div class="row text-center ">
             <div class="col-md-12 ">
@@ -378,7 +344,6 @@
             </div>
         </div>
     </div>
-
     <!-- ##BOWER PACKAGES -->
     <script src="bower_components/jquery/dist/jquery.min.js "></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8 "></script>
