--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="row vertical-align">
             <br>
             <div class="container">
-                <div class="col-md-8">
+                <div class="col-md-10">
                     <h2 class="font-cursive text-accent"> Life coach </h2>
                     <br>
                     <h4>Change your thinking. </h4>
@@ -154,18 +154,34 @@
                     <h4>Be the best version of yourself.</h4>
                     <br>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <div class="row ">
                                 <div class="col-md-12">
-                                    <p><i class="fa fa-quote-left "></i> &nbsp; Lisa's enthusiastic, engaging manner and professionalism make her a fantastic mentor - whom I would recommend to anyone. Her knowledge and expertise guided me through some Important interviews with successful outcomes, gently coaching me to present myself in a clear, confident and intelligent way. I have learned a great deal from Lisa and believe my time with her gave me skills I will use for life. &nbsp; <i class="fa fa-quote-right "></i>
-                                    </p>
                                     <div class="row">
-                                        <div class="col-md-6">
-                                            <img class="img-responsive img-circle " src="./img/alice.jpg"></img>
+                                        <div class="col-md-2">
+                                            <img class="text-center img-responsive img-circle " src="./img/alice.jpg"></img>
                                         </div>
-                                        <div class="col-md-6">
-                                            <p> - Alice Fearnley <strong> Student? </strong>
+                                        <div class="col-md-10">
+                                            <p><i class="fa fa-quote-left "></i> &nbsp; Lisa's enthusiastic, engaging manner and professionalism make her a fantastic mentor - whom I would recommend to anyone. Her knowledge and expertise guided me through some Important interviews with successful outcomes, gently coaching me to present myself in a clear, confident and intelligent way. I have learned a great deal from Lisa and believe my time with her gave me skills I will use for life. &nbsp; <i class="fa fa-quote-right "></i>
                                             </p>
+                                            <p> Alice Fearnley - <strong>Police volunteer &amp; special constable</strong></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                            <div class="row ">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="col-md-2">
+                                            <img class="text-center img-responsive img-circle " src="./img/vijay.jpg"></img>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <p><i class="fa fa-quote-left "></i> &nbsp; Lisa has great communication skills and this helped build our rapport.
+                                                <!--                                         Having had previous coaches and mentors, throughout my career, often the primary focus was for the mentor/coach(s) objective to put on their CV’s, rather than developing the mentee. Lisa was different her only objective was to get me through the promotion process. In many mentor/mentee relationships is the problematic issue of been accessible which I had often experienced, In Lisa’s case access was easily available which made the whole rapport building so much easier. Lisa gave me advice and guidance in a encouraging manner way in that she had belief in my abilities to succeed, this boosted my self confidence. More importantly and as I look back now she gave me the opportunities and opened a number of doors which previous mentors had only suggested. The examples were regular meetings and discussions with the ACPO team and Her Majesty’s Inspectorate of Constabulary (HMIC) which increased my level of awareness of strategic issues, also giving me feedback from their perspective. Lisa not only provided advice but set goals and gave me the opportunity to develop from experiential learning to chair meetings that addressed strategic issues and were constantly challenging my abilities. This again not only boosted my confidence but she also ensured that my skills were “showcased”. This became my stepping stone for further promotion within a very short period of time, working at HMIC performing the role of lead staff officer, raising my profile regionally and nationally. Lisa is without any doubt the best mentor I had in 30 years of my policing career, her personality, character, commitment but above she delivered what she said. Once again thanks Lisa, wishing you all the best in new career. Vijay Singh Associate Inspector Her Majesty’s Inspectorate of Constabulary.  -->
+                                                &nbsp; <i class="fa fa-quote-right "></i>
+                                            </p>
+                                            <p> Vijay Singh - <strong>Associate Inspector, Her Majesty’s Inspectorate of Constabulary.</strong></p>
                                         </div>
                                     </div>
                                 </div>
@@ -176,9 +192,7 @@
             </div>
         </div>
     </div>
-    
     <br>
-
     <div class="row">
         <div class="col-md-12">
             <img class="img-responsive" src="img/lecture.JPG">
